test/es6/openfl/errors/TypeErrorTest.js
import TypeError from "openfl/errors/TypeError";
var assert = chai.assert;


describe ("ES6 | TypeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var typeError = new TypeError ();
		assert.notEqual (typeError, null);
		
	});
	
	
});